0022378: Small patch to fix buffer vulnerability of Draw